emdb/tests/invalid/types/bad_types/code.stderr
error: [QUERY-013] Table `countries` not found in query `no_table`
  --> tests/invalid/types/bad_types/code.rs:14:34
   |
14 |     query cool_bob(no_table: ref countries) {
   |                                  ^^^^^^^^^
   |
   = help: Either use a `ref <other table>` or create `table countries {...} @ [...]
